Change header position to fixed and update z-index

--- a/style.css
+++ b/style.css
@@ -110,8 +110,10 @@ body {
 
 /* HEADER */
 header {
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    width: 100%;
 
     height: 90px;
 
@@ -124,7 +126,7 @@ header {
 
     border-bottom: 1px solid rgba(0,255,225,0.2);
 
-    z-index: 100;
+    z-index: 9999;
 }
 
 /* LOGO */
@@ -781,4 +783,8 @@ header {
 
 .game-frame-wrapper {
     height: calc(100vh - 250px);
+}
+
+body {
+    padding-top: 90px;
 }
